<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_favorites"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fragments_padding_10"
    tools:context=".favorites.FavoritesFragment">

    <!-- Top section -->
    <LinearLayout
        android:id="@+id/linearLayout_favorites_top_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/recyclerview_favorites_classes_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textview_favorites_term_label"
...
