...

    <string name="label_favorites_placeholder_favorites" translatable="false">%1$s - %2$s</string>
    <string name="label_calendar_term_course_details">Calendar term</string>
    <string name="label_calendar_term_class_section">Calendar term:</string>
    <string name="label_curricular_terms_programme_details">Curricular terms</string>
    <string name="label_favorites_delete_message_favorites">Successfully deleted favorite!</string>
    <string name="label_favorite_undo_favorites">Undo</string>
    <string name="label_list_event_week_day_calendar">Week day:</string>
    <string name="label_list_event_duration_calendar">Duration:</string>
    <string name="label_list_event_starts_calendar">Starts:</string>
    <string name="label_list_event_ends_calendar">Ends:</string>
    <string name="label_list_event_delivery_calendar">Delivery:</string>
    <string name="label_lectures_all">Lectures</string>
...
