...
        <LinearLayout
            android:id="@+id/linearlayout_date_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imageview_calendar_next"
            app:layout_constraintStart_toEndOf="@id/imageview_calendar_prev"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textview_date_display_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="April"
                android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                android:textColor="#222222"
...
