<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/fragments_padding_20"
    tools:context=".home.HomeFragment">

    <Button
        android:id="@+id/button_home_programmes"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:drawableEnd="@drawable/ic_school_white_24"
        android:text="@string/title_programmes"/>

    <Button
        android:id="@+id/button_home_calendar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:drawableEnd="@drawable/ic_calendar_today_white_24dp"
        android:text="@string/title_calendar"/>
	
    <Button
        android:id="@+id/button_home_info"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:drawableEnd="@drawable/ic__info_24dp"
        android:text="@string/title_info" />

    <Button
        android:id="@+id/button_home_settings"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:drawableEnd="@drawable/ic_settings_white_24"
        android:text="@string/title_settings"/>
	

</LinearLayout>
