<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="org.ionproject.android.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_programmes"
            app:destination="@id/navigation_programmes"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit" />
        <action
            android:id="@+id/action_home_to_settings"
            app:destination="@id/navigation_settings" />
    	<action
            android:id="@+id/action_home_to_calendar"
            app:destination="@id/navigation_calendar" />
        <action
            android:id="@+id/action_home_to_info"
            app:destination="@id/infoFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_schedule"
        android:name="org.ionproject.android.schedule.ScheduleFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="org.ionproject.android.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites">
        <action
            android:id="@+id/action_favorites_to_class_section"
            app:destination="@id/navigation_class_section"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit"
            app:popUpTo="@id/navigation_class_section"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_favorites_to_programmes"
            app:destination="@id/navigation_programmes"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit" />
    </fragment>

    <fragment
        android:id="@+id/navigation_class_section"
        android:name="org.ionproject.android.class_section.ClassSectionFragment"
        android:label="@string/title_class_section"
        tools:layout="@layout/fragment_class_section" />

    <fragment
        android:id="@+id/navigation_courses"
        android:name="org.ionproject.android.courses.CoursesFragment"
        android:label="@string/title_courses"
        tools:layout="@layout/fragment_courses">
        <action
            android:id="@+id/action_courses_to_course_details"
            app:destination="@id/navigation_course_details"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit" />
    </fragment>

    <fragment
        android:id="@+id/navigation_course_details"
        android:name="org.ionproject.android.course_details.CourseDetailsFragment"
        android:label="@string/title_course_details"
        tools:layout="@layout/fragment_course_details">
        <action
            android:id="@+id/action_course_details_to_class_section"
            app:destination="@id/navigation_class_section"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search_results"
        android:name="org.ionproject.android.search.SearchResultsFragment"
        android:label="@string/title_search_results"
        tools:layout="@layout/fragment_search_results" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="org.ionproject.android.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_programmes"
        android:name="org.ionproject.android.programmes.ProgrammesFragment"
        android:label="@string/title_programmes"
        tools:layout="@layout/fragment_programmes">
        <action
            android:id="@+id/action_programmes_to_programme_details"
            app:destination="@id/navigation_programme_details"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit" />
    </fragment>

    <fragment
        android:id="@+id/navigation_programme_details"
        android:name="org.ionproject.android.programmeDetails.ProgrammeDetailsFragment"
        android:label="@string/title_programme_details"
        tools:layout="@layout/fragment_programme_details">
        <action
            android:id="@+id/action_programme_details_to_courses"
            app:destination="@id/navigation_courses"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="org.ionproject.android.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/infoFragment"
        android:name="org.ionproject.android.info.InfoFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info" />

</navigation>
