<?xml version="1.0" encoding="utf-8"?>
<org.ionproject.android.common.SwipeRightLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_programmes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".programmes.ProgrammesFragment">

    <!-- Loading -->
    <ProgressBar
        android:id="@+id/progressbar_programmes"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_programmes_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/fragments_padding_10"
        tools:listitem="@layout/list_item_programme" />

</org.ionproject.android.common.SwipeRightLinearLayout>